--- a/src/components/restaurantes/restaurantepreview.css
+++ b/src/components/restaurantes/restaurantepreview.css
@@ -53,26 +53,24 @@
 }
 
 .slider img {
-    width: 90%;
+    width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
     border-radius: .50rem;
     margin: 0 1rem;
 }
-@media (max-width: 575.98px) {
+@media (max-width: 768px) {
     .Info, .Informacion , .titulo {
         width: 90vw;
     }
     .slider {
         width: 90vw;
-        height: auto;
+        height: 18rem;
     }
-    
-}
-@media (max-width: 768px) {
-    .slider {
-        width: 90vw;
-        height: auto;
+    .slider img {
+        width: 100%;
+        height: 100%;
+        object-fit:fill;
     }
     
 }
