--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,8 +5,8 @@ header {
     width: 100%;
     height: 80px;
     padding: 15px 25px;
-    background-color:#00C4CC;
-    border-bottom: 4px solid white;
+    background-color: #ff9939;
+    border-bottom: 4px solid rgb(0, 0, 0);
 }
 header h1 {
     color: white !important;
