--- a/src/components/loyaut/layaout.css
+++ b/src/components/loyaut/layaout.css
@@ -27,17 +27,18 @@ ul{
 .footer{
 	width: 100%;
 	margin-top: 50px;
-	background-color: #00C4CC;
-    padding: 42px 0;
-    border-top: 4px solid white;
+	background-color: #ff9939;
+    padding: 60px 0;
+    border-top: 4px solid rgb(0, 0, 0);
 }
 .footer-col{
-   width: 25%;
-   padding: 0 5px;
+   width: 33%;
+   padding: 0 40px;
 }
 .footer-col h4{
-	font-size: 18px;
-	color: #000000;
+	font-size: 1.15em;
+	color: #ffffff;
+	font-weight: 800;
 	text-transform: capitalize;
 	margin-bottom: 35px;
 	font-weight: 500;
@@ -48,7 +49,7 @@ ul{
 	position: absolute;
 	left:0;
 	bottom: -10px;
-	background-color: #0000ff;
+	background-color: #2f2f2f;
 	height: 2px;
 	box-sizing: border-box;
 	width: 50px;
@@ -57,9 +58,8 @@ ul{
 	margin-bottom: 10px;
 }
 .footer-col ul li a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
+	font-size: 1.13em;
+	color: #000000;
 	text-decoration: none;
 	font-weight: 300;
 	display: block;
