--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,10 +5,12 @@ header {
     width: 100%;
     height: 80px;
     padding: 15px 25px;
-    background-color: #ff9939;
-    border-bottom: 4px solid rgb(0, 0, 0);
+    background-color: #ff9551;
+    border-bottom: 3px solid rgb(0, 0, 0);
 }
 header h1 {
+    font-weight: lighter;
+    font-size: 2em;
     color: white !important;
 }
 
@@ -17,6 +19,8 @@ header h1 {
 }
 @media (max-width: 768px) {
     header {
-        height: 95px;
+        padding: 15px 20px;
+        height: 80px;
+        border-bottom: 4px solid rgb(0, 0, 0);
     }
 }
