--- a/src/components/restaurantes/restaurantepreview.css
+++ b/src/components/restaurantes/restaurantepreview.css
@@ -7,7 +7,7 @@
 }
 .Info {
     width: 280px;
-    height: 140px;
+    min-height: 140px;
     background-color: rgb(255, 255, 255);
     border-radius: .50rem;
     filter: drop-shadow(0px 2px 16px rgba(60, 62, 74, 0.08));
@@ -67,14 +67,15 @@
         width: 90vw;
     }
     .slider {
-        margin-top:8vh;
-        width: 90vw;
-        height: 19rem;
+        margin:4vh auto;
+        width: 93vw;
+        height:20rem;
     }
     .slider img {
         width: 90%;
         height: 100%;
-        object-fit:fill;
+        object-fit:cover;
+        margin: 0 .5rem;
     }
     
 }
