--- a/src/hooks/usefiltro.css
+++ b/src/hooks/usefiltro.css
@@ -5,7 +5,8 @@ select {
 }
 @media (max-width: 575.98px) {
     select {
-        width: 90vw;
-        padding: 0;
+        width: auto;
+        padding:.5rem;
+    
     }
 }
