--- a/src/components/restaurantes/restaurantepreview.css
+++ b/src/components/restaurantes/restaurantepreview.css
@@ -67,6 +67,7 @@
         width: 90vw;
     }
     .slider {
+        margin-top: 4vh;
         margin:4vh auto;
         width: 93vw;
         height:20rem;
